--- a/frontend/src/Components/ReportForm.css
+++ b/frontend/src/Components/ReportForm.css
@@ -5,11 +5,31 @@
     border-radius: 10px;
     width:80%;
   }
-  
+  .report-form h2{
+    text-align: center;
+    font-size:30px;
+    font-weight:800;
+    text-transform: uppercase;
+    color: #ffffffd6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:20px;
+  }
+
   .report-form input,
   .report-form textarea {
     width: 100%;
-    margin-bottom: 10px;
-    padding: 10px;
+    margin-bottom:25px;
+    margin-top:7px;
+    padding: 15px;
+    border:none;
+    background-color: #2e2e2e86;
+    border-radius:4px;
+  }
+  label{
+    font-weight:400;
+    padding-right:10px;
+    color: rgba(229, 229, 229, 0.781);
   }
   
