--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #181818;
 }
 *{
   padding:0;
@@ -15,6 +15,7 @@
 }
 body{
   min-height:100vh;
+  box-sizing: border-box;
 }
 .App{
   width:80%;
