--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,6 +20,7 @@ body{
 .App{
   width:80%;
   margin:auto;
+  height:90%;
 }
 
 
@@ -40,7 +41,6 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -48,7 +48,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #b8730bd4;
 }
 button:focus,
 button:focus-visible {
@@ -65,5 +65,10 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+@media(max-width:505px){
+  .App{
+    width:90%;
   }
 }
