--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -21,3 +21,18 @@
  .nav-links li a:hover {
     color: #484848;
   }
+  .language-switcher {
+    display: flex;
+    align-items: center;
+  }
+  
+  .lang-select {
+    padding: 5px 10px;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    outline: none;
+    cursor: pointer;
+  }
+  
+  
