--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -72,14 +72,16 @@
   .nav-links {
     display: none;
     flex-direction: column;
+    align-items: center;
     position: absolute;
     top: 15vh;
     left: 0;
     width: 100%;
-    background-color: white;
-    gap: 10px;
+    background-color: rgb(0, 0, 0);
+    gap:40px;
     padding: 20px;
     z-index: 10;
+    height:100%;
   }
 
   .nav-links.mobile-menu {
@@ -121,6 +123,7 @@
   .lang-select {
     width: 100%;
     max-width: 200px;
+    text-align: center;
   }
 }
 
