--- a/dashboard/src/components/Sidebar.css
+++ b/dashboard/src/components/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    width: 250px;
+    width: 200px;
     background-color: #15151553;
     padding: 20px;
     box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
@@ -50,6 +50,7 @@
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.2s;
+    font-weight:500;
   }
   
   .nav-link:hover {
