--- a/dashboard/src/components/pages/AcceptedReportDetail.css
+++ b/dashboard/src/components/pages/AcceptedReportDetail.css
@@ -1,18 +1,13 @@
-/* AcceptedReportDetail.css */
-
-/* Styling for the "Done" button with a red background */
-.accept-button {
-    background-color: red;
+.done-button{
+  padding: 10px 16px;
+    background-color: #4caf50;
     color: white;
-    font-size: 16px;
-    padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .accept-button:hover {
-    background-color: darkred;
-  }
-  
+    font-weight: 600;
+    font-size: 13px !important;
+    text-wrap: nowrap;
+    display: inline-block;
+    transition: background-color 0.3s;
+}
