--- a/dashboard/src/components/pages/ReportDetail.css
+++ b/dashboard/src/components/pages/ReportDetail.css
@@ -94,17 +94,21 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.8);  /* Black background */
+  background-color: rgba(0, 0, 0, 0.8);
+  /* Black background */
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;  /* Bring the modal to the front */
+  z-index: 1000;
+  /* Bring the modal to the front */
 }
 
 .modal-content {
   position: relative;
-  width: 80%; /* Image will take 80% of the screen width */
-  height: 80%; /* Image will take 80% of the screen height */
+  width: 80%;
+  /* Image will take 80% of the screen width */
+  height: 80%;
+  /* Image will take 80% of the screen height */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -158,7 +162,8 @@
   font-weight: 600;
   font-size: 13px !important;
   text-wrap: nowrap;
-  display: inline-block; /* Ensure it fits properly in the container */
+  display: inline-block;
+  /* Ensure it fits properly in the container */
   transition: background-color 0.3s;
 }
 
@@ -167,13 +172,35 @@
 }
 
 /* Adjustments for mobile view */
+@media (max-width:988px) {
+  .crime-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-wrap: nowrap;
+    width: 100%;
+    gap: 20vw;
+  }
+}
+@media (max-width:859px) {
+  .crime-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-wrap: nowrap;
+    width: 100%;
+    gap:10vw;
+  }
+}
+
 @media (max-width: 768px) {
   .report-detail-container {
     flex-direction: column;
     padding: 1rem;
   }
 
-  .report-left, .report-right {
+  .report-left,
+  .report-right {
     width: 100%;
     padding: 10px;
     border-left: none;
@@ -201,15 +228,19 @@
 
   /* Accept Button styling adjustments for mobile */
   .crime-header {
-    flex-direction: column; /* Stack elements vertically on smaller screens */
-    gap: 10px; /* Adjust gap to make space between elements */
-    align-items: center; /* Center align the elements */
+    flex-direction: column;
+    /* Stack elements vertically on smaller screens */
+    gap: 10px;
+    /* Adjust gap to make space between elements */
+    align-items: center;
+    /* Center align the elements */
   }
 
   .accept-button {
-    width: 100%; /* Make the button take the full width on small screens */
-    padding: 12px 0; /* Increase padding for better click area */
-    font-size: 16px; /* Slightly larger font size for readability */
-    text-align: center; /* Center the button text */
+    /* Increase padding for better click area */
+    font-size: 16px;
+    /* Slightly larger font size for readability */
+    text-align: center;
+    /* Center the button text */
   }
 }
