--- a/dashboard/src/components/pages/Home.css
+++ b/dashboard/src/components/pages/Home.css
@@ -10,9 +10,9 @@
 
 .dashboard-boxes {
   display: flex;
-  justify-content: space-around;
+  justify-content:center;
   flex-wrap: wrap;
-  gap: 20px;
+  gap:20px;
 }
 
 .dashboard-box {
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items:center; /* change from center to stretch */
   gap: 30px;
-  width: 250px;
+  width: 293px;
   height: 220px;
   padding: 30px 20px;
   background-color: #232323;
