--- a/dashboard/src/components/Sidebar.css
+++ b/dashboard/src/components/Sidebar.css
@@ -35,7 +35,20 @@
   margin-top: 20px;
 }
 
-.nav-link,
+.nav-link{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 15px;
+  color: #9e9e9e;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.2s;
+  font-weight: 500;
+  background-color: transparent;
+  border: none;
+  font-size: 15px;
+}
 .nav-link-btn {
   display: flex;
   align-items: center;
@@ -49,6 +62,7 @@
   background-color: transparent;
   border: none;
   font-size: 15px;
+  width:100%;
 }
 
 .nav-link:hover,
