--- a/branches/src/index.css
+++ b/branches/src/index.css
@@ -1,23 +1,57 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif !important;
   line-height: 1.5;
-  font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #181818;
 }
+*{
+  padding:0;
+  margin:0;
+  box-sizing: border-box;
+  font-family:'Outfit';
+  scroll-behavior: smooth;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+body,html{
+  min-height:100%;
+  width:100%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+}
+.app-container{
+  width:100%;
+  margin:auto;
+}
+
 
 
 body {
+  margin: 0;
   min-width: 320px;
   min-height: 100vh;
 }
+
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+}
+@media(max-width:505px){
+  .App{
+    width:90%;
+  }
+}
+
 
 .district-selection {
   display: flex;
