--- a/branches/src/pages/DashboardLayout.css
+++ b/branches/src/pages/DashboardLayout.css
@@ -1,60 +1,64 @@
-.layout-container {
-    display: flex;
-    overflow: hidden;
-  }
-  
-  .layout-content {
-    flex: 1;
-    padding:1rem 8.1rem;
-    overflow-y:none;
-  }
-  
-  
-  .dashboard-title {
-    font-size: 2rem;
-    margin-bottom: 2rem;
-  }
-  
-  .dashboard-boxes {
-    display: flex;
-    gap: 2rem;
-  }
-  
-  .dashboard-box {
-    background-color: #f5f5f5;
-    border-radius: 10px;
-    padding: 1.5rem;
-    flex: 1;
-    text-align: center;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    cursor: pointer;
-    transition: transform 0.2s ease;
-  }
-  
-  .dashboard-box:hover {
-    transform: translateY(-4px);
-    background-color: #f0f0f0;
-  }
-  
-  .title-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1rem;
-  }
-  
-  .title-row h2 {
-    font-size: 1.2rem;
-  }
-  
-  .title-row p {
-    font-size: 0.9rem;
-    color: #555;
-    font-weight: bold;
-  }
-  
-  .dashboard-box p {
-    margin-top: 1rem;
-    color: #666;
-  }
-  
+.layout-content {
+  flex: 1;
+  padding-top:75px;
+  overflow-y: auto;
+}
+
+.dashboard-heading {
+  font-size: 2em;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.dashboard-boxes {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.dashboard-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 35px;
+  width: 333px;
+  height: 270px;
+  padding: 30px 20px;
+  background-color: #232323;
+  text-align: left;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.dashboard-box:hover {
+  transform: scale(1.05);
+}
+
+.title-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.title-row h2 {
+  font-size: 1em;
+  color: #ffffffb7;
+  margin: 0;
+}
+
+.title-row p {
+  color: #ccc;
+  margin: 0;
+}
+
+.dashboard-box p {
+  font-size: 1em;
+  color: #555;
+  margin: 0;
+}
