--- a/branches/src/pages/ReportDetails.css
+++ b/branches/src/pages/ReportDetails.css
@@ -108,7 +108,7 @@
 
 .done-button {
   padding: 10px 16px;
-  background-color: #888;
+  background-color: #4caf50;
   color: white;
   border: none;
   border-radius: 5px;
