--- a/dashboard/src/components/pages/AcceptedReports.css
+++ b/dashboard/src/components/pages/AcceptedReports.css
@@ -11,6 +11,32 @@
   background-color: #333;
   border: 1px solid #2a2a2a;
 }
+.accepted-reports {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  max-width: 90%;
+  background-color: #1a1a1a;
+  border-radius: 12px;
+  padding:12px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  word-break: break-word;
+  overflow-wrap: anywhere;
+}
+.done-reports {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  max-width: 90%;
+  background-color: #1a1a1a;
+  border-radius: 12px;
+  padding: 7px 10px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  word-break: break-word;
+  overflow-wrap: anywhere;
+}
 
 /* ✅ Delete and Decline toolbar */
 .delete-toolbar {
@@ -89,7 +115,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px;
+  padding: 13px 16px;
   margin-bottom: 12px;
   border-radius: 8px;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
